--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -34,6 +34,7 @@
   left: 8px;
   border-radius: 3rem;
   z-index: 1;
+  height: 80%;
 }
 .hero-text{
   display: flex;
@@ -88,4 +89,74 @@
 }
 .right-h {
   flex: 1;
+  position: relative;
+  background-color: var(--orange);
+}
+
+.right-h>.btn{
+  position: absolute;
+  right:3rem;
+  top:2rem; 
+  color: black;
+}
+.heart-rate{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: var(--darkGrey); 
+  width: fit-content;
+  padding: 1rem;
+  align-items: flex-start;
+  border-radius: 5px;
+  position: absolute;
+  right: 4rem;
+  top: 7rem; 
+}
+.heart-rate>:nth-child(2){
+  color:var(--gray)
+}
+.heart-rate>:nth-child(3){
+  color: white;
+  font-size: 1.5rem;
+}
+.hero-image{
+  position: absolute;
+  top: 10rem;
+  right: 8rem;
+  width: 23rem;
+}
+.hero-image-back{
+  position: absolute;
+  top: 4rem;
+  right:20rem;
+  z-index:-1;
+  width: 15rem;
+}
+.calories{
+  display: flex;
+  gap: 2rem;
+  background-color: var(--caloryCard);
+  border-radius: 5px;
+  padding: 1rem;
+  width: 12rem;
+  position: absolute;
+  top: 32rem;
+  right: 28rem;
+  
+}
+.calories>img{
+  width: 3rem;
+}
+.calories>div{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between ;
+  /* flex-wrap: nowrap; */
+}
+.calories>div>:nth-child(1){
+  color: var(--gray);
+}
+.calories>div>:nth-child(2){
+  color: white;
+  font-size: 1.5rem;
 }
