--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -1,5 +1,5 @@
 .plans-container{
-    margin-top: 4rem;
+    /* margin-top: 4rem; */
     padding: 0 2rem;
     display: flex;
     flex-direction: column;
@@ -17,4 +17,42 @@
     display: flex;
     flex-direction: column;
     background: var(--caloryCard);
+    color: white;
+    gap: 2rem;
+    padding: 1.5rem;
+}
+.plan:nth-child(2){
+    background:var(--planCard);
+    transform: scale(1.1);
+}
+.plan>svg{
+    fill: var(--orange);
+    width: 2rem;
+    height: 2rem;
+}
+.plan>:nth-child(2){
+    font-size: 1rem;
+    font-weight: bold;
+}
+.plans>:nth-child(2)>svg{
+    fill: white;
+}
+.plans>:nth-child(2)>button{
+    color: var(--orange);
+}
+.plan>:nth-child(3){
+    font-size: 3rem;
+    font-weight: bold;
+}
+.plan:nth-child(5){
+    font-size: 0.8rem;
+}
+
+.feature{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.feature>img{
+    width: 1rem;
 }
