--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -27,3 +27,19 @@
 .logo-f>img{
     width: 10rem;
 }
+/* .footer-blur-1{
+    bottom: 0;
+    right: 15%;
+    width: 26rem;
+    height: 12rem;
+    filter: blur(100px);
+    background: orange;
+} */
+.footer-blur-2{
+    bottom: 0;
+    /* left: 15%; */
+    width: 100vw;
+    height: 15rem;
+    filter: blur(250px);
+    background: rgba(255,115,0);
+}
