--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -6,6 +6,19 @@
     gap: 4rem;
     position: relative;
 }
+
+.plans-blur-1{
+    width: 32rem;
+    height: 23rem;
+    top:6rem;
+    left: 0rem;      
+}
+.plans-blur-2{
+    width: 32rem;
+    height: 23rem;
+    top: 10rem;
+    right: 0rem;
+}
 .plans{
     display: flex;
     align-items: center;
