--- a/src/components/Reasons/Reasons.css
+++ b/src/components/Reasons/Reasons.css
@@ -41,6 +41,12 @@
     display: flex;
     flex-direction: column;
 }
+.blur-r{
+    width: 30rem;
+    height: 23rem;
+    top: 70rem;
+    right: 5rem;
+}
 .right-r>span{
     font-weight: bold;
     color: var(--orange);
