--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -69,3 +69,12 @@
 .feature>img{
     width: 1rem;
 }
+@media screen  and (max-width:768px){
+    .plans{
+        flex-direction: column;
+
+    }
+    .plans>:nth-child(2){
+        transform: none;
+    }
+}
