--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,3 +19,17 @@
     cursor: pointer;
     color: var(--orange);
 }
+
+@media screen and (max-width:768px) {
+    .header>:nth-child(2){
+        position: fixed;
+        right: 2rem;
+        z-index: 55;
+    }
+
+    .header-menu{
+        flex-direction: column;
+        background-color: var(--appColor);
+        padding: 2rem; 
+    }
+}
