--- a/src/components/Testimonials/Testimonial.css
+++ b/src/components/Testimonials/Testimonial.css
@@ -75,3 +75,36 @@ line-height: 40px;
     width: 1.5rem;
     cursor: pointer;
 }
+
+@media screen and (max-width:768px) {
+    .Testimonials{
+        flex-direction: column;
+    }
+    .left-t>:nth-child(2),.left-t>:nth-child(2){
+         font-size: xx-large;
+    }
+    .right-t{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+    }
+    .right-t>div{
+        position: relative;
+        display: none;
+    }
+    .right-t>img{
+        top: 0;
+        right: 0;
+        position: relative;
+        align-self:center ;
+    }
+    .right-t>:last-child{
+        display: block;
+        bottom: 0;
+        left: 0;
+        gap: 1rem;
+
+    }
+}
